# team20_ad

./: .gitignore  FD.py  LICENSE  README.md  documentation.md  install_package.sh  milestone2_progress.md  pyproject.toml
.github/workflows/: coverage.yml  test.yml
docs/: milestone1.md  milestone2.md
src/team20ad/: dualNumber.py  elementary.py  forwardAD.py  reverseAD.py  wrapperAD.py
tests/: check_coverage.sh
tests/test_codes/: test_dualNumber.py  test_elementary.py  test_forward.py  test_reverse.py  test_reverse_node.py  test_wrapper.py
