[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "team20_ad"
version = "0.0.5"
authors = [
  { name="Tom Zhang", email="zhangsiyuan777@gmail.com" },
]
description = "Harvard CS107 Fall 2022 Team 20 - Automatic Differentiation"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
